# agentecs-viz

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  hatch_build.py  pyproject.toml
.agents/: REPO_CONTEXT.md  REQUIREMENTS.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.reference/frontend/: package.json  vitest.config.ts
.reference/frontend/src/lib/: ChatTab.svelte  DataTab.svelte  EntityList.svelte  PetriDish.svelte  config.ts  websocket.ts  world.svelte.ts
.reference/frontend/src/lib/__tests__/: types.test.ts  utils.test.ts
.reference/src/agentecs_viz/: config.py  protocol.py  server.py  snapshot.py
.reference/src/agentecs_viz/sources/: remote.py
.reference/tests/: __init__.py  test_cli.py  test_local_source.py  test_remote_source.py  test_server.py  test_snapshot.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/__tests__/: app.test.ts  archetype-analysis.test.ts  archetypes-state.test.ts  archetypes-tab.test.ts  colors.test.ts  config.test.ts  diff.test.ts  distribution.test.ts  entityview.test.ts  errorpanel.test.ts  header.test.ts  helpers.ts  inspector.test.ts  jsontree.test.ts  layout.test.ts  query.test.ts  querybuilder.test.ts  rendering.test.ts  statusbar.test.ts  tabbar.test.ts  temporal-tab.test.ts  temporal.test.ts  tick-timeline.test.ts  timeline-bar.test.ts  traces-tab.test.ts  traces.test.ts  types.test.ts  utils.test.ts  websocket.test.ts  world.test.ts
frontend/src/lib/: ArchetypesTab.svelte  DistributionPanel.svelte  EntityView.svelte  ErrorPanel.svelte  Header.svelte  InspectorPanel.svelte  JsonTree.svelte  QueryBuilder.svelte  StatusBar.svelte  TabBar.svelte  TemporalTab.svelte  TickTimeline.svelte  TimelineBar.svelte  TimelineTab.svelte  TracesTab.svelte  archetype-analysis.ts  colors.ts  config.ts  diff.ts  distribution.ts  filter-value.ts  layout.ts  query.ts  rendering.ts  traces.ts  types.ts  utils.ts  websocket.ts
frontend/src/lib/state/: archetypes.svelte.ts  temporal.svelte.ts  timeline.svelte.ts  world.svelte.ts
src/agentecs_viz/: __init__.py  _version.py  cli.py  config.py  history.py  protocol.py  server.py  snapshot.py
src/agentecs_viz/sources/: __init__.py  _base.py  local.py  mock.py  replay.py
tests/: helpers.py  test_cli.py  test_config.py  test_file_history.py  test_history.py  test_local_source.py  test_mock_source.py  test_package.py  test_protocol.py  test_replay_source.py  test_server.py  test_snapshot.py
