[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentecs-viz"
version = "0.1.0"
description = "Visualization server for AgentECS - real-time entity visualization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ecs", "visualization", "agents", "ai", "dashboard"]
authors = [
    { name = "ExtensiveLabs", email = "contact@extensivelabs.com" },
    { name = "Ingo Marquart", email = "digital@ingomarquart.de" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "agentecs>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0",
    "bandit[toml]>=1.7.8",
]

[project.scripts]
agentecs-viz = "agentecs_viz.cli:main"

[project.urls]
Documentation = "https://extensivelabs.github.io/agentecs/viz/"
Issues = "https://github.com/extensivelabs/agentecs-viz/issues"
Source = "https://github.com/extensivelabs/agentecs-viz"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "frontend/dist/",  # Include pre-built frontend in sdist
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentecs_viz"]
# Include frontend static files created by build hook
artifacts = ["src/agentecs_viz/frontend/**/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agentecs"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "agentecs.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.bandit]
skips = ["B101", "B311"]
